--- a/HTML5-CSS3-Part.1/style.css
+++ b/HTML5-CSS3-Part.1/style.css
@@ -1,5 +1,6 @@
 body {
     background: #CCCCCC;
+    font-family: Arial, Helvetica, sans-serif;
 }
 #banner {
     width: 100%;
@@ -19,4 +20,8 @@ em strong {
 
 #mission {
     font-size: 20px;
+}
+
+.itens {
+    font-style: italic;
 }
