--- a/HTML5-CSS3-Part.1/style.css
+++ b/HTML5-CSS3-Part.1/style.css
@@ -1,27 +1,48 @@
-body {
-    background: #CCCCCC;
-    font-family: Arial, Helvetica, sans-serif;
-}
 #banner {
-    width: 100%;
+	width:100%;
 }
 
-h1 {
-    text-align: center;
+.principal{
+	background: #CCCCCC;
+	padding: 30px;
+}
+
+.titulo-principal {
+	padding-left: 20px;
+}
+
+.titulo-centralizado {
+	text-align: center
 }
 
 p {
-    text-align: center;
+	text-align: center;
+}
+
+#missao {
+	font-size: 20px
 }
 
 em strong {
-    color: #FF0000;
-}
-
-#mission {
-    font-size: 20px;
+	color: #FF0000;
 }
 
 .itens {
-    font-style: italic;
+	font-style: italic
+}
+
+.beneficios {
+	background: #FFFFFF;
+	padding: 20px;
+}
+
+ul {
+	display: inline-block;
+	vertical-align: top;
+	width: 20%;
+	margin-right: 15%;
+}
+
+.imagembeneficios {
+	width: 50%;
 }
