--- a/HTML5-CSS3-Part.1/style.css
+++ b/HTML5-CSS3-Part.1/style.css
@@ -4,7 +4,7 @@
 
 .principal{
 	background: #CCCCCC;
-	padding: 30px;
+	padding: 30px; /* 0 1 2 3*/ /*Para definir a area separadamente podemos usar as unidades em sentido horario sendo 0=up 1=right 2=down 3=left*/
 }
 
 .titulo-principal {
