--- a/HTML5-CSS3-Part.1/contato/contato.css
+++ b/HTML5-CSS3-Part.1/contato/contato.css
@@ -28,3 +28,37 @@ form label, form legend {
 fieldset {
     width: 52.5%;
 }
+
+.enviar {
+    width: 40%;
+    padding: 15px 0;
+    background: #ff7300;
+    color: #ffffff;
+    font-size: 18px;
+    font-weight: bold;
+    border: none;
+    border-radius: 5px;
+    transition: 0.5s all;
+    cursor: pointer;
+}
+
+.enviar:hover {
+    background: #ff4000;
+    transform: scale(1.2); /*Transform só aceita duas propriedades se colocado no mesmo elemento*/
+
+}
+
+table {
+    margin: 20px 0 40px;
+}
+
+thead {
+    background: #555555;
+    color: #ffffff;
+    font-weight: bold;
+}
+
+td, th {
+    border: 1px #000000 solid;
+    padding: 8px 15px;
+}
