--- a/HTML5-CSS3-Part.1/produtos.css
+++ b/HTML5-CSS3-Part.1/produtos.css
@@ -94,3 +94,32 @@ footer {
     font-size: 13px;
     margin-top: 20px;
 }
+
+/*css da página inicial*/
+.banner {
+    width: 100%;
+}
+
+.titulo-centralizado {
+    text-align: center;
+    font-size: 2em;
+    margin: 0 0 1em;
+}
+
+.principal p{
+    margin: 0 0 1em;
+}
+
+.principal strong {
+    font-weight: bold;
+}
+
+.principal em {
+    font-style: italic;
+}
+
+.utensilios {
+    width: 150px;
+
+}
+
