--- a/HTML5-CSS3-Part.1/style.css
+++ b/HTML5-CSS3-Part.1/style.css
@@ -189,3 +189,17 @@ td, th {
 .imagembeneficios {
 	width: 60%;
 }
+
+.mapa {
+	padding: 3m 0;
+}
+
+.mapa p {
+	margin: 0 0 2em;
+	text-align: center;
+}
+
+.video {
+	width: 560px;
+	margin: 1em auto;
+}
