--- a/HTML5-CSS3-Part.1/style.css
+++ b/HTML5-CSS3-Part.1/style.css
@@ -97,7 +97,7 @@ footer {
 }
 
 main {
-
+	
 }
 
 form {
@@ -168,7 +168,7 @@ td, th {
 }
 
 .principal {
-	padding: 3m 0;
+	padding: 3em 0;
 	background: #FEFEFE;
 	width: 940px;
 	margin: 0 auto;
@@ -193,7 +193,7 @@ td, th {
 }
 
 .mapa {
-	padding: 3m 0;
+	padding: 3em 0;
 	background: linear-gradient(#FEFEFE, #888888);
 }
 
@@ -227,15 +227,27 @@ td, th {
 	line-height: 1.5;
 }
 
-.itens:nth-child(1) {
+.itens:first-child {
 	font-weight: bold;
 }
 
 .imagem-beneficios {
 	width: 60%;
+	opacity: 1;
+	transition: 400ms;
+	box-shadow: 10px 10px 10px 5px #000000, -10px -10px 10px 5px red;
+}
+
+.imagem-beneficios:hover {
+	opacity: 0.3;
 }
 
 .video {
 	width: 560px;
 	margin: 2em auto;
 }
+
+.itens:before {
+    content: "★";
+}
+
