--- a/Alura-memoteca/src/app/app.component.html
+++ b/Alura-memoteca/src/app/app.component.html
@@ -1,4 +1,6 @@
 <app-cabecalho></app-cabecalho>
-<main></main>
+<main>
+    <app-criar-pensamentos></app-criar-pensamentos>
+</main>
 <app-rodape></app-rodape>
 
