--- a/introducao-javascript/css/index.css
+++ b/introducao-javascript/css/index.css
@@ -134,5 +134,10 @@ button[disabled=disabled], button:disabled {
 }
 
 .paciente-invalido {
-	background: lightcoral;
+	background-color: lightcoral;
+}
+
+#mensagens-erro{
+	color: red;
+	font-weight: bold;
 }
