--- a/introducao-javascript/css/index.css
+++ b/introducao-javascript/css/index.css
@@ -137,7 +137,16 @@ button[disabled=disabled], button:disabled {
 	background-color: lightcoral;
 }
 
-#mensagens-erro{
+#mensagens-erro {
 	color: red;
 	font-weight: bold;
 }
+
+.fadeOut {
+	opacity: 0;
+	transition: 0.5s;
+}
+
+
+
+
