--- a/introducao-javascript/css/index.css
+++ b/introducao-javascript/css/index.css
@@ -147,6 +147,10 @@ button[disabled=disabled], button:disabled {
 	transition: 0.5s;
 }
 
-
+#filtrar-tabela {
+    width: 200px;
+    height: 35px;
+    margin-bottom: 10px;
+}
 
 
