Capturando erros de requisição, add retorno de erro e sucesso

--- a/introducao-javascript/css/index.css
+++ b/introducao-javascript/css/index.css
@@ -156,3 +156,13 @@ button[disabled=disabled], button:disabled {
 .invisivel{
     display: none;
 }
+
+.style-erros {
+	color: red;
+	font-weight: bold;
+}
+
+.style-success {
+	color: green;
+	font-weight: bold;
+}
