add mais funcionalidades ao grid

--- a/Layouts com Grid/src/assets/style/grid/secao.css
+++ b/Layouts com Grid/src/assets/style/grid/secao.css
@@ -1,5 +1,6 @@
 .secao {
     display: grid;
+    align-items: center;
 }
 
 .secao-horizontal {
@@ -14,3 +15,4 @@
 .secao-vertical .secao__cartoes {
     grid-column: 1/3;
 }
+
