--- a/Layouts com Grid/src/assets/style/style.css
+++ b/Layouts com Grid/src/assets/style/style.css
@@ -2,4 +2,6 @@
 @import url('./grid/index.css');
 @import url('./grid/cartao.css');
 @import url('./grid/secao.css');
+@import url('./grid/menu.css');
+@import url('./grid/navbar.css');
 @import url('./responsivo.css');
