--- a/Layouts com Grid/src/assets/style/grid/cartao.css
+++ b/Layouts com Grid/src/assets/style/grid/cartao.css
@@ -1,6 +1,7 @@
 .secao-horizontal .cartao {
     display: grid;
     grid-template-columns: auto 1fr auto;
+    column-gap: 1.25rem;
 }
 
 .secao-horizontal .cartao__imagem {
@@ -16,3 +17,10 @@
     grid-area: 1 / 1 / 4 / 2;
 }
 
+.secao-horizontal .cartao__botao {
+    grid-area: 1 / 3 / 4 / 4;
+}
+
+.secao-horizontal .cartao__titulo {
+    align-self: end;
+}
