--- a/Layouts com Grid/src/assets/style/style.css
+++ b/Layouts com Grid/src/assets/style/style.css
@@ -4,4 +4,5 @@
 @import url('./grid/secao.css');
 @import url('./grid/menu.css');
 @import url('./grid/navbar.css');
+@import url('./grid/rodape.css');
 @import url('./responsivo.css');
