--- a/Formação - Desenvolva Aplicações Escaláveis com Angular/jornada-milhas/src/app/shared/header/header.component.html
+++ b/Formação - Desenvolva Aplicações Escaláveis com Angular/jornada-milhas/src/app/shared/header/header.component.html
@@ -1,10 +1,10 @@
-<mat-toolbar>
-    <img src="assets/imagens/logo.png" alt="Logo da aplicação Jornada">
-    <span class="example-spacer"></span>
-    <button mat-button>Vender milhas</button>
-    <button mat-button>Sobre</button>
-    <button mat-raised-button color="primary">CADASTRE-SE</button>
-    <button mat-stroked-button color="">LOGIN</button>
-
-</mat-toolbar>
-  
+<header class="app-header">
+    <mat-toolbar>
+        <img src="assets/imagens/logo.png" alt="Logo da aplicação Jornada">
+        <span class="spacer"></span>
+        <button mat-button>Vender milhas</button>
+        <button mat-button>Sobre</button>
+        <button mat-raised-button color="primary">CADASTRE-SE</button>
+        <button mat-stroked-button color="">LOGIN</button>
+    </mat-toolbar>
+</header>
