Corrigido e pronto para iniciar desafio

--- a/Formação - Desenvolva Aplicações Escaláveis com Angular/jornada-milhas/src/app/pages/home/home.component.html
+++ b/Formação - Desenvolva Aplicações Escaláveis com Angular/jornada-milhas/src/app/pages/home/home.component.html
@@ -4,8 +4,8 @@
     alt="Banner da aplicação Jornada"
   ></app-banner>
   <app-container>
-    <h2>Promoções</h2>
     <app-form-busca></app-form-busca>
+    <h2>Promoções</h2>
     <div class="card-wrapper">
       <app-card-busca></app-card-busca>
       <app-card-busca></app-card-busca>
@@ -26,6 +26,6 @@
   </app-container>
   <app-banner
     src="assets/imagens/banner-homepage-rodape.png"
-    alt="Banner da aplicação Jornada">
-  </app-banner>
+    alt="Banner da aplicação Jornada"
+  ></app-banner>
 </section>
