--- a/Formação - Desenvolva Aplicações Escaláveis com Angular/jornada-milhas/src/app/shared/modal/modal.component.html
+++ b/Formação - Desenvolva Aplicações Escaláveis com Angular/jornada-milhas/src/app/shared/modal/modal.component.html
@@ -1,46 +1,45 @@
 <section class="modal">
-    <h1 mat-dialog-title>Viajante</h1>
-    <div mat-dialog-content>
-        <div class="selecao-idade">          
-            <ul>
-                <li><strong>Adultos</strong></li>
-                <li>&lpar;Acima de 12 anos&rpar;</li>
-                <li>
-                     <app-botao-controle operacao="decrementar"></app-botao-controle>
-                     <span>1</span>
-                     <app-botao-controle operacao="incrementar"></app-botao-controle>
-                </li>
-            </ul>
-
-            <ul>
-                <li><strong>Crianças</strong></li>
-                <li>&lpar;Entre 2 anos e 11 anos&rpar;</li>
-                <li>
-                     <app-botao-controle operacao="decrementar"></app-botao-controle>
-                     <span>1</span>
-                     <app-botao-controle operacao="incrementar"></app-botao-controle>
-                </li>
-            </ul>
-
-            <ul>
-                <li><strong>Bebês</strong></li>
-                <li>&lpar;Até 2 anos&rpar;</li>
-                <li>
-                     <app-botao-controle operacao="decrementar"></app-botao-controle>
-                     <span>1</span>
-                     <app-botao-controle operacao="incrementar"></app-botao-controle>
-                </li>
-            </ul>
-        </div>
-        <div class="selecao-categoria">
-            <p><strong>Categoria</strong></p>
-            <mat-chip-listbox aria-label="Seleção de passagens">
-                <mat-chip-option selected>1 adulto</mat-chip-option>
-                <mat-chip-option>Econômica</mat-chip-option>
-            </mat-chip-listbox>
-        </div>
+  <h1 mat-dialog-title>Viajante</h1>
+  <div mat-dialog-content>
+    <div class="selecao-idade">
+      <ul>
+        <li><strong>Adultos</strong></li>
+        <li>(Acima de 12 anos)</li>
+        <li>
+          <app-botao-controle operacao="decrementar"></app-botao-controle>
+          <span>1</span>
+          <app-botao-controle operacao="incrementar"></app-botao-controle>
+        </li>
+      </ul>
+      <ul>
+        <li><strong>Crianças</strong></li>
+        <li>(Entre 2 e 11 anos)</li>
+        <li>
+          <app-botao-controle operacao="decrementar"></app-botao-controle>
+          <span>1</span>
+          <app-botao-controle operacao="incrementar"></app-botao-controle>
+        </li>
+      </ul>
+      <ul>
+        <li><strong>Bebês</strong></li>
+        <li>(Até 2 anos)</li>
+        <li>
+          <app-botao-controle operacao="decrementar"></app-botao-controle>
+          <span>1</span>
+          <app-botao-controle operacao="incrementar"></app-botao-controle>
+        </li>
+      </ul>
     </div>
-        <div mat-dialog-actions class="modal-actions">
-            <button color="primary" mat-flat-button mat-dialog-close>BUSCAR</button>
-        </div>
+    <div class="selecao-categoria">
+      <p><strong>Categoria</strong></p>
+      <mat-chip-listbox aria-label="Seleção de passagens">
+        <mat-chip-option selected>1 adulto</mat-chip-option>
+        <mat-chip-option>Econômica</mat-chip-option>
+      </mat-chip-listbox>
+    </div>
+  </div>
+  <div mat-dialog-actions class="modal-actions">
+    <button color="primary" mat-flat-button mat-dialog-close>BUSCAR</button>
+  </div>
 </section>
+
